Stuff is getting setup

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,16 +3,9 @@
   "extends": [
     "next/core-web-vitals",
     "plugin:@typescript-eslint/recommended",
-    "plugin:react/recommended",
-    "plugin:prettier/recommended",
-    "plugin:prettier/react",
-    "plugin:prettier/@typescript-eslint"
-  ],
-  "plugins": [
-    "@typescript-eslint",
-    "react",
     "prettier"
   ],
+  "plugins": ["@typescript-eslint", "react", "prettier"],
   "rules": {
     "react/react-in-jsx-scope": "off"
   },
