--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@chakra-ui/react": "^1.7.1",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@fontsource/arvo": "^4.5.0",
     "@fontsource/fira-code": "^4.5.2",
     "@fontsource/roboto-mono": "^4.5.0",
     "framer-motion": "^4.1.17",
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "typed.js": "^2.0.12"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.15.0",
