--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "eslint-config-next": "12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "gray-matter": "^4.0.3",
     "husky": "^7.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
+    "next-mdx-remote": "^3.0.8",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
     "react-test-renderer": "^17.0.2",
