--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-syntax-highlighter": "^15.4.5",
     "typed.js": "^2.0.12"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@testing-library/react": "^12.1.2",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "babel-jest": "^27.3.1",
