--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-syntax-highlighter": "^15.4.5",
     "typed.js": "^2.0.12"
   },
